[gd_scene load_steps=43 format=3 uid="uid://ce6e5sm515005"]

[ext_resource type="Script" uid="uid://b4hc6kw06wyx8" path="res://Scripts/Event/Event.gd" id="1_2roho"]
[ext_resource type="Texture2D" uid="uid://b8v3bj2nw2qd" path="res://Sprites/Overworlds/Characters/trchar000.png" id="1_fchs2"]
[ext_resource type="Texture2D" uid="uid://bc6ts2cvg8esb" path="res://Scripts/Event/square.png" id="2_v8811"]
[ext_resource type="Script" uid="uid://bfxdputsfja3s" path="res://Scripts/Event/Event_page.gd" id="3_h0cj0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m30hk"]
size = Vector2(30, 30)

[sub_resource type="Animation" id="Animation_lrmm7"]
resource_name = "IdleDown"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_62l6y"]
resource_name = "IdleLeft"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_fhy1s"]
resource_name = "IdleRight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_xdp8q"]
resource_name = "IdleUp"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_p5v13"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("2_v8811")]
}

[sub_resource type="Animation" id="Animation_npoxa"]
resource_name = "TurnDown"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"get_next_tile"
}, {
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="Animation_akdca"]
resource_name = "TurnLeft"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"get_next_tile"
}, {
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="Animation_5nbto"]
resource_name = "TurnRight"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 10]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"get_next_tile"
}, {
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="Animation_fjuc3"]
resource_name = "TurnUp"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [13, 14]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"get_next_tile"
}, {
"args": [],
"method": &"finished_turning"
}]
}

[sub_resource type="Animation" id="Animation_mwhlj"]
resource_name = "WalkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 2]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_6otjy"]
resource_name = "WalkLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 6]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_my5vd"]
resource_name = "WalkRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 10]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_y4x13"]
resource_name = "WalkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 14]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qa2bo"]
_data = {
&"IdleDown": SubResource("Animation_lrmm7"),
&"IdleLeft": SubResource("Animation_62l6y"),
&"IdleRight": SubResource("Animation_fhy1s"),
&"IdleUp": SubResource("Animation_xdp8q"),
&"RESET": SubResource("Animation_p5v13"),
&"TurnDown": SubResource("Animation_npoxa"),
&"TurnLeft": SubResource("Animation_akdca"),
&"TurnRight": SubResource("Animation_5nbto"),
&"TurnUp": SubResource("Animation_fjuc3"),
&"WalkDown": SubResource("Animation_mwhlj"),
&"WalkLeft": SubResource("Animation_6otjy"),
&"WalkRight": SubResource("Animation_my5vd"),
&"WalkUp": SubResource("Animation_y4x13")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gkksw"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1knfj"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_632wg"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1mym1"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ew0iu"]
blend_point_0/node = SubResource("AnimationNodeAnimation_gkksw")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_1knfj")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_632wg")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_1mym1")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j1p3m"]
animation = &"TurnLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6vwmy"]
animation = &"TurnRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nymhi"]
animation = &"TurnDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sot5c"]
animation = &"TurnUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_0h15k"]
blend_point_0/node = SubResource("AnimationNodeAnimation_j1p3m")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_6vwmy")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_nymhi")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_sot5c")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_65y62"]
animation = &"WalkLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2fh2q"]
animation = &"WalkRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0ojjl"]
animation = &"WalkDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_71mat"]
animation = &"WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_8qii4"]
blend_point_0/node = SubResource("AnimationNodeAnimation_65y62")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_2fh2q")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_0ojjl")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_71mat")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n6w4q"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ftdmn"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mudr6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_70ump"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dwa62"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_au0bb"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_utwpf"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_ew0iu")
states/Idle/position = Vector2(604, 165)
states/Turn/node = SubResource("AnimationNodeBlendSpace2D_0h15k")
states/Turn/position = Vector2(844, 287)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_8qii4")
states/Walk/position = Vector2(1229, 165)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_n6w4q"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_ftdmn"), "Idle", "Turn", SubResource("AnimationNodeStateMachineTransition_mudr6"), "Turn", "Idle", SubResource("AnimationNodeStateMachineTransition_70ump"), "Turn", "Walk", SubResource("AnimationNodeStateMachineTransition_dwa62"), "Walk", "Turn", SubResource("AnimationNodeStateMachineTransition_au0bb")]
graph_offset = Vector2(0, 87.5243)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_duyul"]
size = Vector2(32, 32)

[node name="Event" type="CharacterBody2D" groups=["Event"]]
z_index = 1
y_sort_enabled = true
collision_layer = 0
collision_mask = 53
script = ExtResource("1_2roho")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 2
texture = ExtResource("2_v8811")
centered = false

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 53
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_m30hk")
one_way_collision_margin = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qa2bo")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qa2bo")
}
tree_root = SubResource("AnimationNodeStateMachine_utwpf")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Turn/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="RayCastTiles" type="RayCast2D" parent="."]
z_index = 3
position = Vector2(16, 16)
target_position = Vector2(0, 32)
collision_mask = 9

[node name="Pages" type="Node" parent="."]

[node name="Page 0" type="Node" parent="Pages"]
script = ExtResource("3_h0cj0")
image = ExtResource("1_fchs2")
sprite_cols = 4
sprite_rows = 4
OffsetSprite = Vector2(0, -16)

[node name="Page 1" type="Node" parent="Pages"]
script = ExtResource("3_h0cj0")

[node name="Page 2" type="Node" parent="Pages"]
script = ExtResource("3_h0cj0")

[node name="CollisionShape2d" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_duyul")

[node name="WalkTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D2" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_body_exited"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_walk_timer_timeout"]
